--- a/style.css
+++ b/style.css
@@ -1,6 +1,21 @@
 html {
     background-color: #869960;
 }
+/*
+@font-face {
+    font-family: 'PT-Sans';
+    src: url('fonts/PT-Sans.eot');
+    src: url('fonts/PT-Sans.eot?#iefix') format('embedded-open-type'),
+    url('fonts/PT-Sans.woff') format('woff'),
+    url('fonts/PT-Sans.ttf') format('truetype'),
+    url('fonts/PT-Sans..svg#pt_sansregulat') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+    move files to folder, include bold, bold-italic, italic files, use same code as above except PT-Sans-Bold
+    font-weight: bold
+}   */ 
+
 body {
     font-family: Tahoma, sans-serif;
     font-size: 87%;
